basic hellotriangle in common